--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -49,7 +48,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.2"
   },
   "engines": {
     "node": "12.16.1",
